добавлен метод проверки наличия узла; исправлено добавление узла